--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,18 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
-    "require": {
+    "require": {/* 正式一定會安裝的套件 */
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*"
+        "laravel/framework": "5.2.*"     
     },
-    "require-dev": {
+    "require-dev": {/* dev mode 才會安裝的套件 */
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*"
+        "symfony/dom-crawler": "2.8.*|3.0.*",
+        "guidovanbiemen/laravel-whoops":"^1.0.1",
+        "barryvdh/laravel-debugbar":"^2.2.2"
     },
     "autoload": {
         "classmap": [
